--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -19,7 +19,7 @@ bind "mwheeldown" "+jump"
 bind "mouse3" "use weapon_molotov; use weapon_incgrenade"
 bind "mouse4" "use weapon_flashbang"
 bind "mouse5" "use weapon_smokegrenade"
-bind "/" "player_ping"
+bind "ralt" "player_ping"
 
 alias +clearinspect "r_cleardecals; +lookatweapon"
 alias -clearinspect "-lookatweapon"
@@ -35,7 +35,7 @@ bind "del" "disconnect"
 
 alias +jumpthrow "-attack; -attack2; +jump"
 alias -jumpthrow "-jump"
-bind "alt" "+jumpthrow"
+bind "end" "+jumpthrow"
 
 bind q lastinv
 bind g drop
